# anvil-framework-s

./: .gitignore  DEVLOG.md  GITHUB_SETUP.md  README.md  pyproject.toml  start_anvil.bat  start_anvil.py  start_anvil.sh  suggesstions_10thJun.md
.github/workflows/: ci.yml
anvil_server/: README.md  __init__.py  requirements.txt  run.py
anvil_server/app/: __init__.py  builder_routes.py  canvas_routes.py  config.py  examples_data.py  executor.py  main.py  sandbox.py  schemas.py  ws_routes.py
anvil_web/: .env.example  .gitignore  README.md  index.html  package-lock.json  tsconfig.node.json
anvil_web/src/: App.tsx  main.tsx  styles.css  tokens.css
anvil_web/src/components/: Builder.tsx  CalcPad.tsx  Calculator.tsx  Catalog.tsx  ComparePanel.tsx  LineChart.tsx  MathView.tsx  ShortcutsHelp.tsx  Spotlight.tsx  SweepPanel.tsx  SystemSolvePanel.tsx
anvil_web/src/hooks/: useConnection.ts
anvil_web/src/lib/: api.ts  arithmetic.ts  canvasEval.ts  canvasGraph.ts  canvasStore.ts  compare.ts  docs.ts  export.ts  expr.ts  grouping.ts  layout.ts  memory.ts  numbers.ts  packs.ts  report.ts  sciexpr.ts  types.ts  wiring.ts
anvil_web_v1/: .env.example  index.html  package.json
anvil_web_v1/src/: App.tsx  styles.css
anvil_web_v1/src/components/: Builder.tsx  Calculator.tsx  Catalog.tsx  LineChart.tsx  (+2 more)
docs/: ADAPTER_GUIDE.md  ADAPTER_PIPELINE.md  ANVIL_GUIDE.html  ANVIL_WIKI.html  NASA_CEA_GUIDE.md  RSQ_AUTHORING_PROMPT.md  RSQ_PIPELINE.md  build_examples.py  build_wiki.py  features.html  index.html  quickstart.html  wiki.html
docs/wiki/: 01_quickstart.md  02_quantity.md  03_units.md  04_relation.md  05_system.md  06_solvers.md  07_registry.md  08_project.md  09_builtin_rsqs.md  10_adapters.md  11_sweep_sensitivity.md  12_visualization.md  13_databases.md  14_limits.md  15_advanced.md  16_decomp.md  17_abel.md  18_cfd.md  19_signal_processing.md  20_workbench.md  21_contributing.md  22_examples.md  23_propulsion.md  24_physics.md  25_chemistry.md  index.md
examples/: bump.amesh  bump_flow.vtk  ex01_rocket_nozzle.py  ex02_heat_exchanger.py  ex03_orbital_transfer.py  ex05_wind_tunnel.py  ex06_two_stage_rocket.py  ex07_combustion.py  ex09_cantera_cea.py  ex10_detonation.py  ex11_ode_solvers.py  ex12_project_registry.py  ex13_controls_analysis.py  ex14_materials_fatigue.py  ex15_aero_performance.py  ex16_optimization.py  ex17_rayleigh_flow.py  ex18_decomp.py  ex21_poliastro_adapter.py  ex22_pykep_adapter.py  ex_cfd_subsonic_bump.py  ex_cfd_supersonic_ramp.py  ex_cfd_wedge.py  ex_chemistry.py  ex_coolprop_adapter.py  ex_curve_fitting.py  ex_doe.py  ex_extended_rsqs.py  ex_fenics_adapter.py  ex_jet_engine_cycle.py  ex_meshing_adapter.py  ex_ode_patterns.py  ex_openfoam_adapter.py  ex_openmdo_adapter.py  ex_orifice_pressure_solver.py  ex_physics.py  ex_project_workflow.py  ex_pynastran_adapter.py  ex_rocketcea_adapter.py  ex_showcase_v2.py  (+11 more)
src/anvil/: __init__.py  cli.py  client.py  doe.py  propulsion.py  quantity.py  seed.py  system.py
tests/: test_backend_features.py  test_canvas_scripts.py  test_chemistry.py  test_fixes_v05.py  test_latex.py  test_m2.py  test_m4_adapters.py  test_physics.py  test_propulsion.py  test_rsq_pack.py  test_sandbox.py  test_scripts_run.py  test_smoke_onboarding.py  test_system_builder.py  test_v03.py  test_v04.py  test_ws_residuals.py
(+30 files in other folders)
