[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil-framework"
version = "1.3.0"
description = "From equations to engineering tools. A computation framework for researchers."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Anvil Contributors"}]
keywords = [
    "engineering", "computation", "simulation", "aerospace", "physics",
    "units", "FEM", "CFD", "MDO", "signal-processing", "surrogate-model",
    "parametric-sweep", "sensitivity-analysis", "registry",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.scripts]
anvil = "anvil.cli:main"

[project.optional-dependencies]
viz       = ["matplotlib>=3.7"]
# Web workbench backend (FastAPI server in anvil_server/)
server    = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.5"]
poliastro = ["poliastro>=0.17", "astropy>=5.0"]
pykep     = ["pykep>=2.6"]
cantera   = ["cantera>=3.0"]
# CFD adapters
xfoil     = []                                 # XFOIL: CLI binary, no pip package
su2       = []                                 # SU2_CFD: binary from su2code.github.io
openfoam  = []                                 # OpenFOAM: OS package, not pip
# FEM adapters
fenics    = ["fenics-dolfinx", "mpi4py", "petsc4py"]
nastran   = ["pyNASTRAN>=1.3"]
# MDO adapter
openmdao  = ["openmdao>=3.27"]
# Surrogate adapters
surrogate = ["scikit-learn>=1.3"]
gpy       = ["GPy>=1.10"]
# Base adapter set (space/propulsion)
adapters  = ["poliastro>=0.17", "astropy>=5.0", "pykep>=2.6"]
gpu       = ["jax[cuda12]"]
dev       = ["pytest>=7.0", "pytest-cov", "ruff>=0.6", "matplotlib>=3.7",
             "fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.5"]
all       = [
    "matplotlib>=3.7",
    "poliastro>=0.17", "astropy>=5.0", "pykep>=2.6",
    "pyNASTRAN>=1.3",
    "openmdao>=3.27",
    "scikit-learn>=1.3",
    "fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.5",
]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["anvil*"]
exclude = ["anvil_web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["anvil_web", "anvil_web_v1", "docs", "canvases"]

[tool.ruff.lint]
# Correctness-focused gate: real bugs, not style. Broader style rules
# (unused imports, formatting) are tracked as a separate cleanup pass.
select = [
    "E9",    # syntax errors
    "F63",   # invalid comparisons / assertion mistakes
    "F7",    # syntax (break/return outside loop/function, etc.)
    "F82",   # undefined names
    "F821",  # undefined name reference
]
